force-app/main/default/objects/Implementation__c/Implementation__c.object-meta.xml
<CustomObject>
    <description>This object is used by the Implementation&apos;s Teams to set up and track new and conversion plans.</description>
    <label>Implementation</label>
    <nameField>
        <label>Implementation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>