force-app/main/default/objects/Implementation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Associated with Implementation</description>
    <inlineHelpText>Account Associated with Implementation</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Implementations</relationshipLabel>
    <relationshipName>Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>