force-app/main/default/objects/Implementation__c/fields/Account_Application_Sent_to_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Account_Application_Sent_to_Custodian__c</fullName>
    <description>Date account application is sent to custodian.</description>
    <inlineHelpText>Date account application is sent to custodian.</inlineHelpText>
    <label>Account Application Sent to Custodian</label>
    <type>Date</type>
</CustomField>