force-app/main/default/objects/Implementation__c/fields/ACH_Application__c.field-meta.xml
<CustomField>
    <fullName>ACH_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when ACH Application is complete</description>
    <inlineHelpText>Check when ACH Application is complete</inlineHelpText>
    <label>ACH Application</label>
    <type>Checkbox</type>
</CustomField>