force-app/main/default/objects/Implementation__c/fields/Activated_in_PRKS__c.field-meta.xml
<CustomField>
    <fullName>Activated_in_PRKS__c</fullName>
    <description>Stamped when Activate in PRKS project task is marked complete on imp.</description>
    <label>Activated in PRKS</label>
    <type>Date</type>
</CustomField>