force-app/main/default/objects/Implementation__c/fields/Actual_Plan_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Plan_Release_Date__c</fullName>
    <description>Date the client actively resumes the Implementation after placing it on hold</description>
    <inlineHelpText>Date the client actively resumes the Implementation after placing it on hold</inlineHelpText>
    <label>Actual Plan Release Date</label>
    <type>Date</type>
</CustomField>