force-app/main/default/objects/Implementation__c/fields/Add_2_Employees__c.field-meta.xml
<CustomField>
    <fullName>Add_2_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show client how to add 2 or more employees to the plan</description>
    <inlineHelpText>Show client how to add 2 or more employees to the plan</inlineHelpText>
    <label>Add 2 Employees</label>
    <type>Checkbox</type>
</CustomField>