force-app/main/default/objects/Implementation__c/fields/Adoption_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Adoption Agreement signed?</description>
    <inlineHelpText>Is Adoption Agreement signed?</inlineHelpText>
    <label>Adoption Agreement</label>
    <type>Checkbox</type>
</CustomField>