force-app/main/default/objects/Implementation__c/fields/Agreement_for_Services__c.field-meta.xml
<CustomField>
    <fullName>Agreement_for_Services__c</fullName>
    <formula>Opportunity_Name__r.Agreement_for_Services_A4S__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement for Services</label>
    <type>Checkbox</type>
</CustomField>