force-app/main/default/objects/Implementation__c/fields/Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Received__c</fullName>
    <formula>Opportunity_Name__r.CloseDate</formula>
    <inlineHelpText>Date Agreement is received and plan is Closed</inlineHelpText>
    <label>Agreement Received</label>
    <type>Date</type>
</CustomField>