force-app/main/default/objects/Implementation__c/fields/Assets_Expected__c.field-meta.xml
<CustomField>
    <fullName>Assets_Expected__c</fullName>
    <description>Date assets are expected to be received.</description>
    <inlineHelpText>Date assets are expected to be received.</inlineHelpText>
    <label>Assets Expected</label>
    <type>Date</type>
</CustomField>