force-app/main/default/objects/Implementation__c/fields/Assets_Received__c.field-meta.xml
<CustomField>
    <fullName>Assets_Received__c</fullName>
    <inlineHelpText>Date the Conversion assets are received</inlineHelpText>
    <label>Assets Received</label>
    <type>Date</type>
</CustomField>