force-app/main/default/objects/Implementation__c/fields/Assist_with_Payroll_Submission__c.field-meta.xml
<CustomField>
    <fullName>Assist_with_Payroll_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If client is ready to fund, allow then to walk through a first funding (client shares screen)</description>
    <inlineHelpText>If client is ready to fund, allow then to walk through a first funding (client shares screen)</inlineHelpText>
    <label>Assist with Payroll Submission</label>
    <type>Checkbox</type>
</CustomField>