force-app/main/default/objects/Implementation__c/fields/Assisted_Connection_Message__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Connection_Message__c</fullName>
    <label>Assisted Connection Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>