force-app/main/default/objects/Implementation__c/fields/Assisted_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Connection_Status__c</fullName>
    <label>Assisted Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Error - no account setup</fullName>
            </value>
            <value>
                <fullName>Error - permissions</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>