force-app/main/default/objects/Implementation__c/fields/Auto_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment__c</fullName>
    <description>Will the plan be utilizing Auto-Enrollment, and if so what type?</description>
    <inlineHelpText>Will the plan be utilizing Auto-Enrollment, and if so what type?</inlineHelpText>
    <label>Auto-Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>EACA</fullName>
            </value>
            <value>
                <fullName>QACA</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>