force-app/main/default/objects/Implementation__c/fields/Auto_Pay_Provider_is_Finch__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Provider_is_Finch__c</fullName>
    <label>Auto Pay Provider is Finch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>