force-app/main/default/objects/Implementation__c/fields/Basis_Roth_Start_Date_Info__c.field-meta.xml
<CustomField>
    <fullName>Basis_Roth_Start_Date_Info__c</fullName>
    <description>Required only if plan has ROTH</description>
    <inlineHelpText>Required only if plan has ROTH</inlineHelpText>
    <label>Basis &amp; Roth Start Date Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>