force-app/main/default/objects/Implementation__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <inlineHelpText>From Account linked to Implementation</inlineHelpText>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>