force-app/main/default/objects/Implementation__c/fields/Billing_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subscription_Start_Date__c</fullName>
    <description>The later of &quot;Ubiquity Plan Effective Date&quot; or &quot;Activated in PRKS&quot; (stamped when project task is completed)</description>
    <formula>IF(ISBLANK(Activated_in_PRKS__c), NULL,
IF(Activated_in_PRKS__c &lt; Ubiquity_Plan_Effective_Date__c ,Ubiquity_Plan_Effective_Date__c, Activated_in_PRKS__c))</formula>
    <inlineHelpText>The later of &quot;Ubiquity Plan Effective Date&quot; or &quot;Activated in PRKS&quot; (stamped when project task is completed)</inlineHelpText>
    <label>Billing Subscription Start Date</label>
    <type>Date</type>
</CustomField>