force-app/main/default/objects/Implementation__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <inlineHelpText>From Account linked to Implementation</inlineHelpText>
    <label>Billing Zip Code</label>
    <type>Text</type>
</CustomField>