force-app/main/default/objects/Implementation__c/fields/Blackout_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_End_Date__c</fullName>
    <inlineHelpText>Date the blackout period ends.</inlineHelpText>
    <label>Blackout End Date</label>
    <type>Date</type>
</CustomField>