force-app/main/default/objects/Implementation__c/fields/Blackout_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Extension_Date__c</fullName>
    <description>Date of most recent Blackout Extension</description>
    <inlineHelpText>Date of most recent Blackout Extension</inlineHelpText>
    <label>Blackout Extension Date</label>
    <type>Date</type>
</CustomField>