force-app/main/default/objects/Implementation__c/fields/Blackout_Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Extension_Reason__c</fullName>
    <description>Reason(s) the blackout has been extended</description>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Blackout Extension Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final Asset Report delayed</fullName>
            </value>
            <value>
                <fullName>Final Asset Report incorrect</fullName>
            </value>
            <value>
                <fullName>Missing data</fullName>
            </value>
            <value>
                <fullName>Terminated employees missing</fullName>
            </value>
            <value>
                <fullName>Nonresponsive client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>