force-app/main/default/objects/Implementation__c/fields/Blackout_Extension_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Extension_Reason_Detail__c</fullName>
    <description>Details/Other Reason the Blackout was Extended</description>
    <inlineHelpText>Details/Other Reason the Blackout was Extended</inlineHelpText>
    <label>Blackout Extension Reason Detail</label>
    <type>TextArea</type>
</CustomField>