force-app/main/default/objects/Implementation__c/fields/Blackout_Notice_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Notice_to_Client__c</fullName>
    <description>Blackout notice emailed to client to distribute to participants</description>
    <inlineHelpText>Blackout notice emailed to client to distribute to participants</inlineHelpText>
    <label>Blackout Notice to Client</label>
    <type>Date</type>
</CustomField>