force-app/main/default/objects/Implementation__c/fields/Blackout_Notice_URL__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Notice_URL__c</fullName>
    <label>Blackout Notice URL</label>
    <type>Url</type>
</CustomField>