force-app/main/default/objects/Implementation__c/fields/Blackout_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Start_Date__c</fullName>
    <inlineHelpText>Start date of the Blackout for Conversion Plans</inlineHelpText>
    <label>Blackout Start Date</label>
    <type>Date</type>
</CustomField>