force-app/main/default/objects/Implementation__c/fields/Bonding__c.field-meta.xml
<CustomField>
    <fullName>Bonding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remind client that a bond is needed to protect plan assets and to find a sign up link on the implementation overview page</description>
    <inlineHelpText>Remind client that a bond is needed to protect plan assets and to find a sign up link on the implementation overview page</inlineHelpText>
    <label>Bonding</label>
    <type>Checkbox</type>
</CustomField>