force-app/main/default/objects/Implementation__c/fields/Business_Entity_PRKS__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_PRKS__c</fullName>
    <description>Business Entity listed on Account record. If this needs to be updated, change it on the Account.</description>
    <formula>Account__r.Business_Entity_PRKS__c</formula>
    <inlineHelpText>Business Entity listed on Account record. If this needs to be updated, change it on the Account.</inlineHelpText>
    <label>Business Entity PRKS</label>
    <type>Text</type>
</CustomField>