force-app/main/default/objects/Implementation__c/fields/Calendly_Document_Review__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Document_Review__c</fullName>
    <description>Date of Document Review Call
Past = had call
Today = call is today
Future = call scheduled for future date</description>
    <inlineHelpText>Date of Document Review Call
Past = had call
Today = call is today
Future = call scheduled for future date</inlineHelpText>
    <label>Calendly Document Review</label>
    <type>Date</type>
</CustomField>