force-app/main/default/objects/Implementation__c/fields/Calendly_Intro_Plan_Design__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Intro_Plan_Design__c</fullName>
    <description>Date of Intro/Plan Design Call
Past = had call
Today = call is today
Future = call scheduled for future date</description>
    <inlineHelpText>Date of Intro/Plan Design Call
Past = had call
Today = call is today
Future = call scheduled for future date</inlineHelpText>
    <label>Calendly Intro/Plan Design</label>
    <type>Date</type>
</CustomField>