force-app/main/default/objects/Implementation__c/fields/Census_and_Eligibility_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Census_and_Eligibility_Uploaded__c</fullName>
    <description>Date which plan census and eligibility is uploaded.</description>
    <inlineHelpText>Date which plan census and eligibility is uploaded.</inlineHelpText>
    <label>Census and Eligibility Uploaded</label>
    <type>Date</type>
</CustomField>