force-app/main/default/objects/Implementation__c/fields/Census_and_Payroll_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Census_and_Payroll_Instructions_Sent__c</fullName>
    <description>Instructions for uploading census and 1st payroll sent to client</description>
    <inlineHelpText>Instructions for uploading census and 1st payroll sent to client</inlineHelpText>
    <label>Census and Payroll Instructions Sent</label>
    <type>Date</type>
</CustomField>