force-app/main/default/objects/Implementation__c/fields/Census_Call__c.field-meta.xml
<CustomField>
    <fullName>Census_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Census Call been completed?</description>
    <inlineHelpText>Has Census Call been completed?</inlineHelpText>
    <label>Census Call</label>
    <type>Checkbox</type>
</CustomField>