force-app/main/default/objects/Implementation__c/fields/Census_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Census_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you&apos;ve completed the Census Call Steps</inlineHelpText>
    <label>Census Call Complete</label>
    <type>Checkbox</type>
</CustomField>