force-app/main/default/objects/Implementation__c/fields/Census_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Census_Call_Date_Time__c</fullName>
    <description>Date and time the Census Call is scheduled?</description>
    <inlineHelpText>Date and time the Census Call is scheduled?</inlineHelpText>
    <label>Census Call Date/Time</label>
    <type>DateTime</type>
</CustomField>