force-app/main/default/objects/Implementation__c/fields/Census_Call_Method__c.field-meta.xml
<CustomField>
    <fullName>Census_Call_Method__c</fullName>
    <description>Call technology for census call</description>
    <inlineHelpText>Call technology for census call</inlineHelpText>
    <label>Census Call Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom</fullName>
                <default>true</default>
                <label>Zoom</label>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>