force-app/main/default/objects/Implementation__c/fields/Census_Complete__c.field-meta.xml
<CustomField>
    <fullName>Census_Complete__c</fullName>
    <description>Calculated to determine if census complete.</description>
    <formula>Count_of_Employees_Census__c /  Account__r.NumberOfEmployees</formula>
    <inlineHelpText>Calculated to determine if census complete.</inlineHelpText>
    <label>Census Complete %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>