force-app/main/default/objects/Implementation__c/fields/Census_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Census_Instructions_Sent__c</fullName>
    <description>Date census instructions were sent</description>
    <inlineHelpText>Date census instructions were sent</inlineHelpText>
    <label>Census Instructions Sent</label>
    <type>Date</type>
</CustomField>