force-app/main/default/objects/Implementation__c/fields/Census_Process_Overview__c.field-meta.xml
<CustomField>
    <fullName>Census_Process_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss census and demo adding employee  - mention welcome emails 30 days prior to plan entry</description>
    <inlineHelpText>Discuss census and demo adding employee  - mention welcome emails 30 days prior to plan entry</inlineHelpText>
    <label>Census Process Overview</label>
    <type>Checkbox</type>
</CustomField>