force-app/main/default/objects/Implementation__c/fields/Census_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Census_Self_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for client to pilot Self-Service Videos</description>
    <inlineHelpText>Check for client to pilot Self-Service Videos</inlineHelpText>
    <label>Self-Service</label>
    <type>Checkbox</type>
</CustomField>