force-app/main/default/objects/Implementation__c/fields/Census_Tutorial_Complete__c.field-meta.xml
<CustomField>
    <fullName>Census_Tutorial_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when client completes self-service census tutorial on plan overview page.</description>
    <inlineHelpText>Checked when client completes self-service census tutorial on plan overview page.</inlineHelpText>
    <label>Census Tutorial Complete</label>
    <type>Checkbox</type>
</CustomField>