force-app/main/default/objects/Implementation__c/fields/Chat_Test__c.field-meta.xml
<CustomField>
    <fullName>Chat_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For testing imp chat button</description>
    <label>Chat Test</label>
    <type>Checkbox</type>
</CustomField>