force-app/main/default/objects/Implementation__c/fields/Client_Aware_to_Start_Deducting_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Client_Aware_to_Start_Deducting_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Aware to Start Deducting Payroll</label>
    <type>Checkbox</type>
</CustomField>