force-app/main/default/objects/Implementation__c/fields/Complete_without_funding__c.field-meta.xml
<CustomField>
    <fullName>Complete_without_funding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sets off automation to complete imp without funding - end of approval process</description>
    <label>Complete without funding</label>
    <type>Checkbox</type>
</CustomField>