force-app/main/default/objects/Implementation__c/fields/Confirm_Success_of_Payroll_Submission__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Success_of_Payroll_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check payroll submission on Paradigm to ensure accuracy</description>
    <inlineHelpText>Check payroll submission on Paradigm to ensure accuracy</inlineHelpText>
    <label>Confirm Success of Payroll Submission</label>
    <type>Checkbox</type>
</CustomField>