force-app/main/default/objects/Implementation__c/fields/Connected_Partner__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner__c</fullName>
    <description>Partner with shared SLAs - Set on Account</description>
    <formula>TEXT(Account__r.Connected_Partner__c )</formula>
    <inlineHelpText>Partner with shared SLAs - Set on Account</inlineHelpText>
    <label>Connected Partner</label>
    <type>Text</type>
</CustomField>