force-app/main/default/objects/Implementation__c/fields/Conv_Billing_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Conv_Billing_Subscription_Start_Date__c</fullName>
    <description>If Liquidation Date is between 1st and 15th of the Month, Billing Start is 1st of that month
If Liquidation Date is between 16th and end of month, Billing Start is 1st of the following month</description>
    <formula>IF(

(DAY( Liquidation_Date__c )&lt;16),

(DATE(YEAR( Liquidation_Date__c ),MONTH( Liquidation_Date__c ),1)), 

(DATE(YEAR( Liquidation_Date__c ),MONTH( Liquidation_Date__c )+1,1))
)</formula>
    <inlineHelpText>If Liquidation Date is between 1st and 15th of the Month, Billing Start is 1st of that month
If Liquidation Date is between 16th and end of month, Billing Start is 1st of the following month</inlineHelpText>
    <label>Conv Billing Subscription Start Date</label>
    <type>Date</type>
</CustomField>