force-app/main/default/objects/Implementation__c/fields/Conversion_Assets__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets__c</fullName>
    <description>Total amount of conversion assets.</description>
    <inlineHelpText>Total amount of conversion assets.</inlineHelpText>
    <label>Conversion Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>