force-app/main/default/objects/Implementation__c/fields/Conversion_Assets_Posted__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets_Posted__c</fullName>
    <description>Date Conversion Assets are Posted.</description>
    <inlineHelpText>Date Conversion Assets are Posted.</inlineHelpText>
    <label>Conversion Assets Posted</label>
    <type>Date</type>
</CustomField>