force-app/main/default/objects/Implementation__c/fields/Conversion_Assets_Settled__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets_Settled__c</fullName>
    <description>Date conversion assets settled to participant accounts</description>
    <inlineHelpText>Date conversion assets settled to participant accounts</inlineHelpText>
    <label>Conversion Assets Settled</label>
    <type>Date</type>
</CustomField>