force-app/main/default/objects/Implementation__c/fields/Conversion_Records_Received__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Records_Received__c</fullName>
    <description>Conversion records received - pending review to ensure complete data received</description>
    <inlineHelpText>Conversion records received - pending review to ensure complete data received</inlineHelpText>
    <label>Conversion Records Received</label>
    <type>Date</type>
</CustomField>