force-app/main/default/objects/Implementation__c/fields/Copy_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Copy_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Advisor</label>
    <type>Checkbox</type>
</CustomField>